# task-master

./: .gitignore  AGENTS.md  Cargo.toml  README.md  UI_PATTERNS.md  build.rs  manifest  task-master.example.toml  task-master.toml
.beads/: interactions.jsonl  metadata.json
.beads/hooks/: post-push
.github/workflows/: ci.yml  release.yml
.opencode/agents/: e2e.md  orchestrate.md  plan.md  qa.md  supervisor.md
src/: add_project.rs  agent_configs.rs  beads.rs  cleanup.rs  e2e.rs  gh.rs  git_identity.rs  hooks.rs  main.rs  notify.rs  orchestrate.rs  plan.rs  project.rs  qa.rs  registry.rs  serena.rs  slug.rs  spawn.rs  stats.rs  status.rs  supervise.rs  templates.rs  tmux.rs  tui.rs  update.rs  worktree.rs
src/tui/: actions.rs  app.rs  input.rs  mod.rs  pr_info.rs
src/ui/: confirm_close.rs  confirm_remove_worktree.rs  help.rs  main_screen.rs  mod.rs  prompt.rs  theme.rs  theme_picker.rs  update_prompt.rs
