[package]
name = "task-master"
version = "0.2.29"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
anyhow = "1"
ratatui = "0.28"
ansi-to-tui = "6.0.1"
crossterm = "0.28"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
